--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -11,10 +11,15 @@
   z-index: 200;
 }
 
+.sidebar-dark{
+  color: #fff;
+  border: 1px solid #292929;
+}
+
 .logo{
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  gap: 0.5rem;
   font-size: 1.2rem;
   font-weight: 600;
   padding: 2.5rem 1.8rem 0;
@@ -50,6 +55,7 @@
 
 .play{
   background: #fef2f2;
+  color: #000;
   text-align: start;
   border: 1px solid #fca5a5;
   border-radius: 20px;
@@ -83,6 +89,10 @@
   .sidebar{
     display: none;
     background: lightgray;
+  }
+
+  .sidebar-dark{
+    background: #44403c;
   }
 
   .show{
