--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,15 @@ html, body{
   font-size: clamp(10px, 16px, 20px);
 }
 
+.app{
+  background: #e5e7eb;
+  transition: all ease-in-out 1.2s;
+}
+
+.app-dark{
+  background: #141414;
+}
+
 button{
   cursor: pointer;
 }
