--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,3 +1,7 @@
+.cards-1{
+  padding-bottom: 1rem;
+}
+
 .movie-cards{
   display: flex;
   flex-wrap: wrap;
@@ -8,27 +12,49 @@
   justify-content: space-around;
 }
 
-.favorite{
+.favorite, .back-1{
   display: flex;
   align-items: center;
   gap: 0.3rem;
+  background: #141414;
+  color: #fff;
+  width: fit-content;
   font-size: 1.3rem;
   font-weight: 400;
+  cursor: pointer;
+  border-radius: 5px 10px 5px 10px;
+  padding: 0 0.3rem 0.3rem;
   margin-bottom: 1rem;
+  transition: all ease-in-out 1.2s;
+}
+
+.favorite:hover, .back-1:hover{
+  opacity: 0.85 !important;
+}
+
+.favorite-dark, .back-1-dark{
+  background: #f3f2f2;
+  color: #000;
 }
 
 .favorite > span{
-  color: #f90684;
-  cursor: pointer;
-}
-
-.favorite > span:hover{
-  color: #f472b6;
+  color: #ec4899;
 }
 
 .favorite > img{
   width: 0.9rem;
   height: 0.9rem;
+  margin: 0.3rem 0 0 0.2rem;
+}
+
+.back-1{
+  padding-right: 1rem;
+}
+
+.movie-3{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .box{
@@ -101,6 +127,10 @@
   color: black;
   font-weight: 600;
   opacity: 0.9;
+}
+
+.movie-title-dark, .movie-scores-dark{
+  color: #fff;
 }
 
 .name{
