--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -38,6 +38,11 @@
 .title-1{
   font-size: 3rem;
   font-weight: 600;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .name{
