--- a/src/components/watch-screen/watch-screen.css
+++ b/src/components/watch-screen/watch-screen.css
@@ -61,8 +61,8 @@ iframe{
 
 .play-button{
   background: #d4d4d8;
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 5rem;
+  height: 5rem;
   padding: 1rem;
   transition: 0.3s;
   border-radius: 50%;
@@ -100,16 +100,21 @@ iframe{
   gap: 0.5rem;
 }
 
-.heading > small{
+.action{
+  display: flex;
+  gap: 0.8rem;
+}
+
+.action > small{
   color: darkred;
-  border: 0.1px solid #e7e5e4;
+  border: 0.1px solid #d8d6d5;
   border-radius: 20px;
   padding: 0.1rem 0.8rem;
 }
 
-.heading-dark > small{
+.action-dark > small{
   color: #dc2626;
-  border: 1px solid #292929;
+  border: 1px solid #222222;
 }
 
 .count{
@@ -260,10 +265,15 @@ button{
     padding-bottom: 1.5rem;
   }
 
+  .heading{
+    flex-direction: column;
+    align-items: start;
+  }
+
   .title{
     flex-direction: column;
     align-items: start;
-    gap: 2rem;
+    gap: 1.5rem;
     margin: 0 0 0.8rem;
   }
 
